@@ -191,6 +191,10 @@ Extension Modules
 Library
 -------
 
+- Bug #1178484: Return complete lines from codec stream readers
+  even if there is an exception in later lines, resulting in
+  correct line numbers for decoding errors in source code. 
+
 - Bug #1192315: Disallow negative arguments to clear() in pdb.
 
 - Patch #827386: Support absolute source paths in msvccompiler.py.
